增加用户名登陆限制，同一个账号只允许登陆一次

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,8 +14,9 @@ validationQuery=SELECT 1
 #jdbc_password=root
 
 #aliCloudLink
+jdbc_url=jdbc:mysql://localhost:3306/analysis?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #jdbc_url=jdbc:mysql://10.171.117.191:3306/analysis?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc_url=jdbc:mysql://123.56.231.50:3306/analysis?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#jdbc_url=jdbc:mysql://123.56.231.50:3306/analysis?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=analysis
 jdbc_password=34songJIA$#
 #jdbc_username=root
